@@ -1,5 +1,6 @@
 pgcenter (devel) unstable; urgency=low
 
+  * add install-man section into Makefile.
   * fix torn multiline records in log tail.
   * use qsort_r() instead of hand-made sorting.
     - many improvements in arrays functions (diff, sort);
